--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "vuetify2-component-types",
-  "version": "2.6.0",
+  "version": "2.6.1",
   "description": "Component types for Volar intellisense with Vuetify 2 and Vue 2.7",
   "type": "module",
   "types": "index.d.ts",
   "scripts": {
-    "generate": "node ./generate.js > ./index.d.ts",
+    "generate": "node ./generate.js > ./index.d.ts && npx tsc --noEmit",
     "prepack": "generate"
   },
   "author": "ascott18, kingyue737",
   "license": "MIT",
   "devDependencies": {
     "prettier": "^2.8.1",
+    "typescript": "^4.9.4",
     "vuetify": "2.6.13"
+  },
+  "peerDependencies": {
+    "vue": "^2.7.9"
   }
 }
