--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vuetify2-component-types",
-  "version": "2.6.3",
+  "version": "2.6.4",
   "description": "Component types for Volar intellisense with Vuetify 2 and Vue 2.7",
   "type": "module",
   "types": "index.d.ts",
   "scripts": {
     "generate": "node ./generate.js > ./index.d.ts && npx tsc --noEmit",
+    "build": "generate",
     "prepack": "generate"
   },
   "repository": "https://github.com/IntelliTect/vuetify2-component-types",
@@ -14,7 +15,8 @@
   "devDependencies": {
     "prettier": "^2.8.1",
     "typescript": "^4.9.4",
-    "vuetify": "2.6.13"
+    "vuetify": "2.6.13",
+    "vue": "2.7.14"
   },
   "peerDependencies": {
     "vue": "^2.7.9"
