--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "ascott18, kingyue737",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^2.8.5",
-    "typescript": "^4.9.5",
-    "vuetify": "2.6.13"
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
+    "vuetify": "^2.7.1"
   },
   "peerDependencies": {
     "vue": "^2.7.9"
